--- a/css/style.css
+++ b/css/style.css
@@ -279,6 +279,39 @@ p a {
         width: 100%;
     }
 
+    .book-content {
+        margin: 0px 5% 0 5%;
+        display: flex;
+        overflow: hidden;
+    }
+
+    #booktitle {
+        margin: 20px;
+    }
+
+    h1, h2, h3, h4 {
+        margin-bottom: 0.5em;
+    }
+
+    ul {
+        margin-block-start: 0em;
+        margin-block-end: 0em;
+        margin-inline-start: 0px;
+        margin-inline-end: 0px;
+    }
+
+    .nav li.chapter {
+        margin-top: 0em;
+    }
+
+    .book-text {
+        padding: 0 10px;
+    }
+
+    .book-content {
+        font-size: 80%;
+    }
+
 }
 
 /* end of size-specific */
@@ -314,7 +347,6 @@ p a {
 /* The color of the links on hover */
 
 .dropdown-menu a:hover {
-    background-color: #111111;
     text-decoration: underline;
 }
 
